--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: mattgomes28/cpp-alpine:0.2
+    environment:
+      CONAN_SYSREQUIRES_MODE: enabled
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
@@ -22,7 +24,7 @@ jobs:
       - run:
           name: "Getting dependencies with Conan"
           command: |
-            conan install . --install-folder conan --build=missing -scompiler=gcc -scompiler.version=9 -scompiler.libcxx=libstdc++11
+            CONAN_SYSREQUIRES_MODE=enabled conan install . --install-folder conan --build=missing -scompiler=gcc -scompiler.version=9 -scompiler.libcxx=libstdc++11
       - run:
           name: "Configure with CMake"
           command: "cmake . --preset unix-deb"
