--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: mattgomes28/cpp-alpine:0.2
+      - image: mattgomes28/cpp-ubuntu:0.1
     environment:
       CONAN_SYSREQUIRES_MODE: enabled
     # Add steps to the job
