--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,11 @@ jobs:
             cmake --version
             conan --version
       - run:
-          name: "Installing Dependencies"
-          command: |
-            ./scripts/install_deps.sh
-      - run:
           name: "Getting dependencies with Conan"
           command: |
             conan profile new default --detect
             conan profile update settings.compiler.libcxx=libstdc++11 default
-            conan install . --install-folder conan --build=missing -scompiler=gcc -scompiler.version=9 -scompiler.libcxx=libstdc++11
+            conan install . --install-folder conan --build=missing -scompiler=gcc -scompiler.version=9 -scompiler.libcxx=libstdc++11 -c tools.system.package_manager:mode=install
       - run:
           name: "Configure with CMake"
           command: |
