Changes to make the template match.

--- a/src/matching_app/CMakeLists.txt
+++ b/src/matching_app/CMakeLists.txt
@@ -1,7 +1,13 @@
 find_package(OpenCV REQUIRED COMPONENTS core highgui imgproc)
+find_package(fmt REQUIRED)
 
 add_executable(matching_app main.cpp)
 
-target_link_libraries(matching_app PRIVATE opencv::core opencv::highgui opencv::imgproc)
+target_link_libraries(matching_app
+ PRIVATE
+  fmt::fmt
+  opencv::core
+  opencv::highgui
+  opencv::imgproc)
 
 install(TARGETS matching_app RUNTIME DESTINATION bin)
